--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@
             </execution>
           </executions>
           <configuration>
-            <mainClass>com.ebigdata.hadoop.hdfs.HDFSWCApp02</mainClass>
+            <mainClass>com.ebigdata.hadoop.mr.wc.WordCountApp</mainClass>
+            <!-- <mainClass>com.ebigdata.hadoop.hdfs.HDFSWCApp02</mainClass> -->
             <!-- <mainClass>com.ebigdata.hadoop.hdfs.HDFSApp</mainClass> -->
           </configuration>
         </plugin>
